# MultimodalResidualOptimization

./: .gitignore  LICENSE  README.md  analyze_iemocap.py  arousal_ratings_synchronized_and_aggregated.csv  dataloader.py  perception_study_arousal.csv  perception_study_valence.csv  pyproject.toml  read_qualtrics.py  routing.py  train.py  utils.py  valence_ratings_synchronized_and_aggregated.csv
cache/: Instagram_intent_test_0.pickle  Instagram_intent_test_1.pickle  Instagram_intent_test_2.pickle  Instagram_intent_test_3.pickle  Instagram_intent_test_4.pickle  Instagram_intent_training_0.pickle  Instagram_intent_training_1.pickle  Instagram_intent_training_2.pickle  Instagram_intent_training_3.pickle  Instagram_intent_training_4.pickle  Instagram_intent_validation_0.pickle  Instagram_intent_validation_1.pickle  Instagram_intent_validation_2.pickle  Instagram_intent_validation_3.pickle  Instagram_intent_validation_4.pickle  Test_bi_test_0.pickle  Test_bi_test_1.pickle  Test_bi_test_2.pickle  Test_bi_test_3.pickle  Test_bi_test_4.pickle  Test_bi_training_0.pickle  Test_bi_training_1.pickle  Test_bi_training_2.pickle  Test_bi_training_3.pickle  Test_bi_training_4.pickle  Test_bi_validation_0.pickle  Test_bi_validation_1.pickle  Test_bi_validation_2.pickle  Test_bi_validation_3.pickle  Test_bi_validation_4.pickle  Test_uni_test_0.pickle  Test_uni_test_1.pickle  Test_uni_test_2.pickle  Test_uni_test_3.pickle  Test_uni_test_4.pickle  Test_uni_training_0.pickle  Test_uni_training_1.pickle  Test_uni_training_2.pickle  Test_uni_training_3.pickle  Test_uni_training_4.pickle  (+5 more)
qualtrics/: ArousalRatings.csv  (+1 more)
