[tool.poetry]
name = " MultimodalResidualOptimization"
version = "0.1.0"
description = "Beyond Additive Fusion: Learning Non-Additive Multimodal Interactions"
authors = ["Torsten Wörtwein <twoertwein@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "3.11.*"
python-tools = {git = "https://bitbucket.org/twoertwein/python-tools.git"}
statsmodels = "^0.13.5"
pingouin = "^0.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
